# Text-Classification

./: README.md  config.py  data_processor.py  main.py  pyproject.toml  requirements.txt  train.py
 models/: lstm.py  textcnn.py
docs/: wandb_usage.md
models/: __init__.py  bert.py  lstm.py  textcnn.py
scripts/: evaluate.py  inference.py  train.py
utils/: wandb_util.py
wandb/: latest-run
wandb/run-20250713_085003-rygsu8qc/: run-rygsu8qc.wandb
wandb/run-20250713_085003-rygsu8qc/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250713_085256-vjwdae2l/: run-vjwdae2l.wandb
wandb/run-20250713_085256-vjwdae2l/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250713_085849-x2jibiq6/files/: requirements.txt  wandb-metadata.json
wandb/run-20250713_124216-rumn3t7r/: run-rumn3t7r.wandb
wandb/run-20250713_124216-rumn3t7r/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250713_124500-gxu3xlf5/: run-gxu3xlf5.wandb
wandb/run-20250713_124500-gxu3xlf5/files/: conda-environment.yaml  config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250713_125031-ydx6khqh/: run-ydx6khqh.wandb
wandb/run-20250713_125031-ydx6khqh/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250713_125318-qm16tscw/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250713_131722-xccknftf/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250713_133549-6mpbp1t8/: run-6mpbp1t8.wandb
wandb/run-20250713_133549-6mpbp1t8/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250713_141344-b90dxk74/: run-b90dxk74.wandb
wandb/run-20250713_141344-b90dxk74/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250714_035258-6utut9lf/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250714_071048-u8dich50/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
